src/objects/Maestro__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Química</fullName>
                </value>
                <value>
                    <fullName>Matemáticas</fullName>
                </value>
                <value>
                    <fullName>Español</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jefe_de_area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jefe de area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <label>Titulo</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Maestro</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nombre de Maestro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maestros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>